force-app/main/default/objects/Trainee__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Trainee</relationshipLabel>
    <relationshipName>Trainee</relationshipName>
    <type>Lookup</type>
</CustomField>