force-app/main/default/objects/Trainee__c/fields/Course_Certification_Cost__c.field-meta.xml
<CustomField>
    <fullName>Course_Certification_Cost__c</fullName>
    <formula>Course__r.Per_Seat_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course Certification Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>