force-app/main/default/objects/Trainee__c/fields/Course_Status__c.field-meta.xml
<CustomField>
    <fullName>Course_Status__c</fullName>
    <label>Course Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
                <default>true</default>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>