force-app/main/default/objects/Trainee__c/fields/Email_ID__c.field-meta.xml
<CustomField>
    <fullName>Email_ID__c</fullName>
    <description>The person has to fill the email id.</description>
    <label>Email ID</label>
    <type>Email</type>
</CustomField>