force-app/main/default/objects/Trainee__c/fields/Test_Date__c.field-meta.xml
<CustomField>
    <fullName>Test_Date__c</fullName>
    <formula>Course__r.Exam_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test Date</label>
    <type>Date</type>
</CustomField>