force-app/main/default/objects/Trainee__c/validationRules/Check_while_creating_trainee_record.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_while_creating_trainee_record</fullName>
    <active>true</active>
    <errorConditionFormula>AND(  NOT( $Setup.Process_Deactivation__c.Deactivate_validation_rules__c ),
NOT( ISPICKVAL(  Course__r.Is_approved__c, &#39;Approved&#39; ) )
 ||  ISBLANK( Contact__r.Email ) )</errorConditionFormula>
    <errorMessage>Record cannot be created without email entry or approved course entry.</errorMessage>
</ValidationRule>